@@ -8,6 +8,7 @@ Changes since 5.0 release
 * FIX handling of ascii matrix data
 * FIX reinitialize brush used to draw dotted lines in gd terminal
 * FIX failure to clear bold/italic text attributes in cairo terminals
+* FIX tabular output of time data when the axis format has not been set
 
 Changes in final release of 5.0
 ===============================
